[package]
name = "http-rest-api-notifications-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
cron_tab = { version = "0.2.12", features = ["async"] }
email_address = "0.2.9"
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[dev-dependencies]
string_from = "0.1.0"
